[package]
name = "rust-ffi"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
"c-call-rust",
"c-call-rust-by-cbindgen",
"rust-call-c",
"rust-call-c-by-bindgen"
]

# Miri doesn't support workspace now
exclude = [ "ub-demo" ]

[workspace.dependencies]
cc = "1.0.73"
bindgen = "0.66.1"
cbindgen = "0.25.0"
